change directory structure