@@ -4,13 +4,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>Simple_shooting_2_1</groupId>
-    <artifactId>Simple_shooting_2.1</artifactId>
+    <artifactId>Simple_shooting_2_1</artifactId>
     <packaging>jar</packaging>
     <version>1.1.5</version>
 
     <properties>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>19</maven.compiler.source>
+        <maven.compiler.target>19</maven.compiler.target>
     </properties>
 
     <dependencies>
@@ -19,42 +19,42 @@
           <artifactId>antlr-complete</artifactId>
           <version>4.11.1</version>
           <scope>system</scope>
-          <systemPath>${basedir}/Libraries/antlr.jar</systemPath>
+          <systemPath>${pom.basedir}/Libraries/antlr.jar</systemPath>
         </dependency>
         <dependency>
           <groupId>org.processing</groupId>
           <artifactId>Processing</artifactId>
           <version>4.1.3</version>
           <scope>system</scope>
-          <systemPath>${basedir}/Libraries/core.jar</systemPath>
+          <systemPath>${pom.basedir}/Libraries/core.jar</systemPath>
         </dependency>
         <dependency>
           <groupId>org.GameControlPlus</groupId>
           <artifactId>GameControlPlus</artifactId>
           <version>1.0.0</version>
           <scope>system</scope>
-          <systemPath>${basedir}/Libraries/GameControlPlus.jar</systemPath>
+          <systemPath>${pom.basedir}/Libraries/GameControlPlus.jar</systemPath>
         </dependency>
         <dependency>
           <groupId>org.gluegen</groupId>
           <artifactId>gluegen-rt</artifactId>
           <version>4.1.3</version>
           <scope>system</scope>
-          <systemPath>${basedir}/Libraries/gluegen-rt.jar</systemPath>
+          <systemPath>${pom.basedir}/Libraries/gluegen-rt.jar</systemPath>
         </dependency>
         <dependency>
           <groupId>com.metsci.ext.org.jogamp.jogl</groupId>
           <artifactId>jogl-all</artifactId>
           <version>4.1.3</version>
           <scope>system</scope>
-          <systemPath>${basedir}/Libraries/jogl-all.jar</systemPath>
+          <systemPath>${pom.basedir}/Libraries/jogl-all.jar</systemPath>
         </dependency>
         <dependency>
           <groupId>org.parser</groupId>
           <artifactId>parser</artifactId>
           <version>1.0.0</version>
           <scope>system</scope>
-          <systemPath>${basedir}/Libraries/parser.jar</systemPath>
+          <systemPath>${pom.basedir}/Libraries/parser.jar</systemPath>
         </dependency>
         <dependency>
           <groupId>org.junit.jupiter</groupId>
@@ -92,6 +92,35 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+            <!-- <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-install-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>install-external</id>
+                        <phase>clean</phase>
+                        <configuration>
+                            <file>${basedir}/Libralies/core.jar</file>
+                            <repositoryLayout>default</repositoryLayout>
+                            <groupId>org.processing</groupId>
+                            <artifactId>Processing</artifactId>
+                            <version>4.1.3</version>
+                            <packaging>jar</packaging>
+                            <generatePom>true</generatePom>
+                        </configuration>
+                        <goals>
+                            <goal>install-file</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin> -->
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.0</version>
+                <configuration>
+                    <compilerArgs>--enable-preview</compilerArgs>
+                </configuration>
             </plugin>
         </plugins>
     </build>
